--- a/src/components/FooterContent/FooterContent.scss
+++ b/src/components/FooterContent/FooterContent.scss
@@ -4,6 +4,7 @@
 .section-footer {
 	margin-top: 3rem;
 	width: 100%;
+	padding-top: 10rem;
 	&__title {
 		font-size: $fs-300;
 		font-family: 'Titillium Web', sans-serif;
