add github icon to each project that has link and add scrollbar to web project in order to see the whole page

--- a/src/components/FooterContent/FooterContent.scss
+++ b/src/components/FooterContent/FooterContent.scss
@@ -2,9 +2,11 @@
 @use '../../styles/variables' as *;
 
 .section-footer {
-	margin-top: 3rem;
 	width: 100%;
 	padding-top: 10rem;
+	@include desktop-sm {
+		margin-top: 3rem;
+	}
 	&__title {
 		font-size: $fs-300;
 		font-family: 'Titillium Web', sans-serif;
