--- a/src/components/Intro/Intro.scss
+++ b/src/components/Intro/Intro.scss
@@ -21,7 +21,8 @@
 		padding: 0;
 		align-items: center;
 		transition: all 0.5s ease;
-		height: 65vh;
+		height: 80vh;
+		margin-top: 0;
 	}
 
 	&__info {
