--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -13,6 +13,11 @@
 	transition: background-color 0.2s ease;
 	font-weight: $fw-700;
 	cursor: pointer;
+	margin-top: 1rem;
+
+	@include tablet {
+		margin-top: 0;
+	}
 
 	&:hover {
 		background-color: $colorLightGreen;
