--- a/src/components/Intro/Intro.scss
+++ b/src/components/Intro/Intro.scss
@@ -17,7 +17,7 @@
 	}
 
 	@include desktop {
-		gap: 10rem;
+		gap: 5rem;
 		padding: 0;
 		align-items: center;
 		transition: all 0.5s ease;
@@ -70,11 +70,22 @@
 		justify-content: flex-end;
 
 		&--img {
-			max-width: 17em;
-			transition: all 0.5s ease-in-out;
+			width: 300px;
+			height: 300px;
+			border-radius: 50%;
+			overflow: hidden;
+			transition: all ease-in 0.5s;
 
-			@include tablet {
-				min-width: 20rem;
+			@include desktop-sm {
+				width: 400px;
+				height: 400px;
+			}
+
+			img {
+				max-width: 100%;
+				max-height: 100%;
+				object-fit: cover;
+				object-position: center center;
 			}
 		}
 	}
