--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -23,3 +23,27 @@
 		@content;
 	}
 }
+@mixin button {
+	font-family: inherit;
+	font-size: 1rem;
+	background-color: $colorLightBlue;
+	color: $primaryLight;
+	border-radius: 5px;
+	border: none;
+	display: inline-block;
+	padding: 0.6rem;
+	transition: all 0.2s ease;
+	font-weight: $fw-700;
+	cursor: pointer;
+}
+@mixin hover {
+	color: #000;
+	transform: translate(-0.25rem, -0.25rem);
+	background: $colorLightGreen;
+	box-shadow: 0.25rem 0.25rem $primary;
+}
+
+@mixin active {
+	transform: translate(0);
+	box-shadow: none;
+}
