--- a/src/components/Intro/Intro.scss
+++ b/src/components/Intro/Intro.scss
@@ -76,9 +76,14 @@
 			overflow: hidden;
 			transition: all ease-in 0.5s;
 
+			@include tablet {
+				width: 300px;
+				height: 300px;
+			}
+
 			@include desktop-sm {
-				width: 400px;
-				height: 400px;
+				width: 380px;
+				height: 380px;
 			}
 
 			img {
