--- a/src/App.scss
+++ b/src/App.scss
@@ -88,6 +88,10 @@ p {
 	width: 100%;
 	padding: 0 2rem;
 
+	@include tablet {
+		padding: 0 2.5rem;
+	}
+
 	@include desktop-sm {
 		max-width: 80rem;
 		margin: 0 auto;
@@ -98,6 +102,9 @@ p {
 	width: 100%;
 	padding: 0 2rem;
 	margin-top: 10rem;
+	@include tablet {
+		padding: 0 2.5rem;
+	}
 	@include desktop-sm {
 		max-width: 80rem;
 		margin: 0 auto;
