--- a/src/components/Intro/Intro.scss
+++ b/src/components/Intro/Intro.scss
@@ -70,11 +70,13 @@
 		justify-content: flex-end;
 
 		&--img {
-			width: 250px;
-			height: 250px;
+			width: 270px;
+			height: 270px;
 			border-radius: 50%;
 			overflow: hidden;
 			transition: all ease-in 0.5s;
+			outline: solid 1px $primary;
+			// box-shadow: 3px 3px 5px rgba($primary, 0.5);
 
 			@include tablet {
 				width: 300px;
