--- a/src/components/Navegation/Navigation.scss
+++ b/src/components/Navegation/Navigation.scss
@@ -8,6 +8,10 @@
 	align-items: center;
 	padding: 0 2rem;
 
+	@include tablet {
+		padding: 0 2.5rem;
+	}
+
 	@include desktop {
 		align-items: stretch;
 		width: 80rem;
