split skills section in different component and separated text into a different jsx

--- a/src/components/TabSection/TabSection.scss
+++ b/src/components/TabSection/TabSection.scss
@@ -35,10 +35,15 @@
 		text-align: left;
 		display: flex;
 		color: $primary;
+		transition: all ease 0.3s;
 
 		&.active {
 			border-left: solid 10px $colorLightGreen;
 			font-weight: $fw-700;
+			color: $colorLightBlue;
+		}
+		&:hover {
+			color: $colorLightBlue;
 		}
 	}
 
