--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -39,8 +39,10 @@
 		}
 
 		&--image {
-			max-width: 4rem;
+			scale: 5;
 			color: $primary;
+			margin-top: 3rem;
+			margin-left: 1.5rem;
 		}
 	}
 
@@ -49,6 +51,7 @@
 		flex-direction: column;
 		flex: 2;
 		line-height: 1.3;
+		margin-left: 2rem;
 		&--title {
 			font-size: $fs-110;
 		}
