--- a/src/components/Navegation/Navigation.scss
+++ b/src/components/Navegation/Navigation.scss
@@ -112,7 +112,8 @@
 		text-align: center;
 		transition: 0.3s;
 		box-shadow: 0px 20px 50px -40px $primary;
-		padding-bottom: 1.5rem;
+		padding: 1.5rem 0;
+		border-top: solid 1px rgba($color: $colorCream, $alpha: 0.4);
 	}
 
 	.nav-item {
