--- a/src/components/Navegation/Navigation.scss
+++ b/src/components/Navegation/Navigation.scss
@@ -25,9 +25,8 @@
 
 .nav-menu {
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
 	align-items: center;
-	gap: 2rem;
 }
 
 .nav-branding {
@@ -104,16 +103,16 @@
 	.nav-menu {
 		position: fixed;
 		left: -100%;
-		top: 70px;
+		top: 0px;
 		gap: 0;
 		flex-direction: column;
-		background-color: $colorLightBlue;
+		background-color: rgba($colorLightBlue, 0.95);
 		width: 100%;
+		min-height: 100vh;
 		text-align: center;
 		transition: 0.3s;
-		box-shadow: 0px 20px 50px -40px $primary;
+		// box-shadow: 0px 20px 50px -40px $primary;
 		padding: 1.5rem 0;
-		border-top: solid 1px rgba($color: $colorCream, $alpha: 0.4);
 	}
 
 	.nav-item {
