playing around with the read more button

--- a/src/components/Intro/Intro.scss
+++ b/src/components/Intro/Intro.scss
@@ -111,6 +111,7 @@
 	color: $colorLightBlue;
 	margin-top: 1rem;
 	display: block;
+	text-decoration: underline;
 
 	@include tablet{
 		display: none;
