playing around with the read more button

--- a/src/components/Intro/Intro.scss
+++ b/src/components/Intro/Intro.scss
@@ -38,6 +38,7 @@
 			font-size: 3rem;
 			font-family: 'Titillium Web', sans-serif;
 			text-align: left;
+			margin-bottom: 1rem;
 
 			@include desktop-sm {
 				font-size: 4rem;
