--- a/src/components/ProgressBar/ProgressBar.scss
+++ b/src/components/ProgressBar/ProgressBar.scss
@@ -17,7 +17,7 @@
 	height: 1.5rem;
 	display: flex;
 	align-items: center;
-	padding-left: 0.5rem;
+	padding: 0.5rem;
 
 	@include desktop-sm {
 		font-size: $fs-090;
