--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -40,7 +40,7 @@
 
 		&--image {
 			scale: 5;
-			color: $primary;
+			color: $colorPurple;
 			margin-top: 3rem;
 			margin-left: 1.5rem;
 		}
@@ -52,12 +52,16 @@
 		flex: 2;
 		line-height: 1.3;
 		margin-left: 2rem;
+		gap: 0.2rem;
 		&--title {
 			font-size: $fs-110;
 		}
 
 		&--body {
 			font-weight: $fw-300;
+			@include tablet{
+				font-size: 1.1rem;
+			}
 		}
 	}
 }
