--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -5,10 +5,10 @@
 	margin-top: 3rem;
 	margin-bottom: 5rem;
 
-	@include desktop-sm {
+	@include tablet {
 		display: grid;
 		grid-template-columns: 1fr 1fr;
-		gap: 8rem;
+		gap: 3rem;
 		margin-top: 5rem;
 	}
 }
@@ -53,13 +53,15 @@
 		line-height: 1.3;
 		margin-left: 2rem;
 		gap: 0.2rem;
+
 		&--title {
 			font-size: $fs-110;
 		}
 
 		&--body {
 			font-weight: $fw-300;
-			@include tablet{
+
+			@include tablet {
 				font-size: 1.1rem;
 			}
 		}
@@ -67,9 +69,15 @@
 }
 
 .skills-progress {
-	margin-top: 5rem;
-	@include desktop-sm {
-		margin-top: 0;
+	margin-top: 3rem;
+
+
+	@include tablet {
+		margin-left: 4rem;
 		flex: 1;
+	}
+
+	@include desktop-sm {
+		margin-top: 0.5rem;
 	}
 }
