changed some css styles for mobile and delete a dependency

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -7,9 +7,9 @@
 	font-size: $fs-090;
 	background-color: $lightColour;
 	color: $colorLightBlue;
-	border-radius: 5px;
+	border-radius: 1rem;
 	border: none;
-	padding: 0.5rem;
+	padding: 0.3rem 1rem;
 	transition: background-color 0.2s ease;
 	font-weight: $fw-700;
 	cursor: pointer;
