--- a/src/components/ContactForm/ContactForm.scss
+++ b/src/components/ContactForm/ContactForm.scss
@@ -73,11 +73,11 @@
 		font-size: $fs-100;
 		background-color: $colorPurple;
 		color: $primaryLight;
-		border-radius: 5px;
+		border-radius: 1rem;
 		border: none;
-		padding: 1rem 1.5rem;
+		padding: 0.7rem 2rem;
 		transition: all 0.2s ease;
-		font-weight: $fw-700;
+		font-weight: $fw-400;
 		cursor: pointer;
 		font-family: inherit;
 		margin-top: 1rem;
