--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -30,6 +30,7 @@
 		&--icon {
 			font-size: 1.4rem;
 			transition: all ease 0.3s;
+			color: $primary;
 
 			&:hover {
 				color: $colorLightGreen;
