changed some css styles for mobile and delete a dependency

--- a/src/components/Bubbles/Bubbles.scss
+++ b/src/components/Bubbles/Bubbles.scss
@@ -1,22 +1,28 @@
 @use '../../styles/mixins' as *;
 @use '../../styles/variables' as *;
 
+.bubbles-title {
+	color: $primary;
+	font-size: 1.5rem;
+	margin-bottom: 1rem;
+}
+
 .bubbles-list {
-    list-style-type: none;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
+	list-style-type: none;
+	display: flex;
+	flex-wrap: wrap;
+	gap: 1rem;
 }
 
 .bubbles-item {
-    background: $colorLightBlue;
-    border-radius: 1rem;
-    font-weight: 400;
-    padding: 0.1rem 1.5rem;
-    color: #fff;
-    font-size: $fs-100;
+	background: $colorLightBlue;
+	border-radius: 1rem;
+	font-weight: 400;
+	padding: 0.1rem 1.5rem;
+	color: #fff;
+	font-size: $fs-100;
 
-    &:nth-child(even) {
-        background: $colorLightGreen;
-    }
+	&:nth-child(even) {
+		background: $colorLightGreen;
+	}
 }
