--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -69,10 +69,15 @@
 }
 
 .skills-progress {
-	margin-top: 3rem;
+	margin-top: 1rem;
+	padding-top: 3rem;
+	border-top: 1px solid $primary;
 
 	@include tablet {
-		margin-left: 4rem;
+		border-top: none;
+		border-left: 1px solid $primary;
+		padding-left: 3rem;
+		padding-top: 0;
 		flex: 1;
 	}
 
