--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -8,7 +8,7 @@
 
 	&__image {
 		aspect-ratio: 16/9;
-		outline: solid 1px $colorPurple;
+		// outline: solid 1px $colorPurple;
 		min-height: 100px;
 
 		img {
