--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,8 @@
 @use './styles/fonts' as *;
 @use './styles/mixins' as *;
 
+// @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=M+PLUS+Rounded+1c:wght@300;400&display=swap');
+
 html {
 	font-family: 'Josefin Sans', sans-serif;
 	box-sizing: border-box;
