--- a/src/components/Intro/Intro.scss
+++ b/src/components/Intro/Intro.scss
@@ -107,7 +107,7 @@
   font-family: inherit;
   font-size: $fs-090;
   font-weight: $fw-700;
-  color: $colorLightBlue;
+  color: var(--primary)LightBlue;
   margin-top: 1rem;
   display: block;
 
