--- a/src/App.scss
+++ b/src/App.scss
@@ -44,6 +44,7 @@ body {
 	line-height: 1.5;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	background: $primaryLight;
 }
 
 img {
@@ -58,10 +59,10 @@ a:visited {
 }
 
 mark {
-	background-color: $colorCream;
+	background-color: $primaryCream;
 	padding: 0.2rem;
 	font-weight: $fw-700;
-	color: $colorPurple;
+	color: $primary;
 }
 
 h1,
@@ -82,7 +83,7 @@ p {
 }
 
 .header {
-	background-color: $colorLightBlue;
+	background-color: $primaryLightBlue;
 	color: #a7d5e5;
 	box-shadow: 0 2px 4px 1px rgba(0, 0, 0, 0.1);
 }
