--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -23,7 +23,7 @@
 		flex-direction: row;
 		align-items: flex-start;
 		gap: 2rem;
-		border-bottom: solid 1px $primary;
+		border-bottom: solid 1px var(--primary);
 		padding-bottom: 2rem;
 
 		&:first-child {
@@ -40,7 +40,7 @@
 
 		&--image {
 			scale: 5;
-			color: $colorPurple;
+			color: rgba(var(--primary), 0.95);
 			margin-top: 3rem;
 			margin-left: 1.5rem;
 		}
@@ -71,11 +71,11 @@
 .skills-progress {
 	margin-top: 1rem;
 	padding-top: 3rem;
-	border-top: 1px solid $primary;
+	border-top: 1px solid var(--primary);
 
 	@include tablet {
 		border-top: none;
-		border-left: 1px solid $primary;
+		border-left: 1px solid var(--primary);
 		padding-left: 3rem;
 		padding-top: 0;
 		flex: 1;
