--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -25,8 +25,8 @@
 }
 @mixin button {
 	font-size: 1rem;
-	background-color: $colorLightBlue;
-	color: $primaryLight;
+	background-color: var(--primary)LightBlue;
+	color: var(--primary)Light;
 	border-radius: 1rem;
 	border: none;
 	display: inline-block;
@@ -38,8 +38,8 @@
 @mixin hover {
 	color: #000;
 	transform: translate(-0.25rem, -0.25rem);
-	background: $colorLightGreen;
-	box-shadow: 0.25rem 0.25rem $primary;
+	background: var(--primary)LightGreen;
+	box-shadow: 0.25rem 0.25rem var(--primary);
 }
 
 @mixin active {
