--- a/src/components/MainProject/MainProject.scss
+++ b/src/components/MainProject/MainProject.scss
@@ -29,10 +29,10 @@
 
 		&--icon {
 			transition: all ease 0.3s;
-			color: var(var(--primary));
+			color: var(--primary);
 
 			&:hover {
-				color: var(var(--primary)LightGreen);
+				color: var(--primaryLightGreen);
 			}
 		}
 
@@ -59,12 +59,13 @@
 	}
 }
 
-.carousel {
-	// outline: solid 1px var(--primary);
-	// box-shadow: 5px 5px 0px var(--primary);
-}
+// .carousel {
+// 	outline: solid 1px var(--primary);
+// 	box-shadow: 5px 5px 0px var(--primary);
+// }
+
 .carousel .control-arrow:hover {
-	background-color: var(var(--primary)LightBlue, 0.4) !important;
+	background-color: var(--primaryLightBlue) !important;
 }
 
 .carousel .slide img {
@@ -74,5 +75,5 @@
 
 .carousel .control-dots .dot {
 	box-shadow: none !important;
-	background-color: var(var(--primary)LightBlue, 0.4) !important;
+	background-color: var(--primaryLightBlue) !important;
 }
