--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -40,7 +40,7 @@
 
 		&--image {
 			scale: 5;
-			color: rgba(var(--primary), 0.95);
+			color: var(--primaryLightBlue);
 			margin-top: 3rem;
 			margin-left: 1.5rem;
 		}
