--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -5,7 +5,7 @@
 	font-family: inherit;
 	display: block;
 	font-size: $fs-090;
-	background-color: var(--primaryLight);
+	background-color: var(--btn-color);
 	color: var(--primaryLightBlue);
 	border-radius: 1rem;
 	border: none;
