--- a/src/components/Intro/Intro.scss
+++ b/src/components/Intro/Intro.scss
@@ -7,7 +7,6 @@
 	flex-direction: column;
 	align-items: center;
 	gap: 3rem;
-	margin-top: 3rem;
 
 	@include tablet {
 		flex-direction: row;
@@ -107,7 +106,7 @@
 	font-family: inherit;
 	font-size: $fs-090;
 	font-weight: $fw-700;
-	color: var(--primary) LightBlue;
+	color: var(--primary);
 	margin-top: 1rem;
 	display: block;
 
